--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.1.9",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
-    "angularfire2": "^5.4.2",
     "firebase": "^7.14.6",
     "medium-editor": "^5.23.3",
     "rxjs": "~6.5.4",
