--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
+    "typescript": "^3.6.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -44,7 +45,6 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "^3.8.3"
+    "tslint": "~6.1.0"
   }
 }
